Install docker-py when running xci as part of CI
docker-py package is required by the docker_container module in ansible:

http://docs.ansible.com/ansible/latest/docker_container_module.html#docker-container

Change-Id: Ib051ae09c84cfa973ef814852e78626499471d0f
Signed-off-by: Manuel Buil <mbuil@suse.com>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -137,15 +137,13 @@
         content: "{{ xci_ssl_key }}"
         dest: "/etc/ssl/private/xci.key"
       become: true
-    # install docker on opnfv host only if we are running as part of CI
-    - name: install docker
+    - name: install opnfv required packages
       package:
-        name: "{{ docker_package_name }}"
+        name: "{{ opnfv_required_packages }}"
         state: latest
-      when: lookup('env', 'JENKINS_HOME') != ""
-    - name: install python-openstackclient
+    - name: install opnfv required pip packages
       pip:
-        name: python-openstackclient
+        name: "{{ opnfv_required_pip }}"
         state: present
 
 - hosts: localhost
