Install docker-py when running xci as part of CI
docker-py package is required by the docker_container module in ansible:

http://docs.ansible.com/ansible/latest/docker_container_module.html#docker-container

Change-Id: Ib051ae09c84cfa973ef814852e78626499471d0f
Signed-off-by: Manuel Buil <mbuil@suse.com>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -143,6 +143,11 @@
         name: "{{ docker_package_name }}"
         state: latest
       when: lookup('env', 'JENKINS_HOME') != ""
+    - name: install docker-py
+      pip:
+        name: docker-py
+        state: latest
+      when: lookup('env', 'JENKINS_HOME') != ""
     - name: install python-openstackclient
       pip:
         name: python-openstackclient
