xci: Clone all XCI scenarios in advance similar to a-r-r
In order to plug the scenarios' roles properly, we need to have all
roles physically present in advance. As such, add a
opnfv-scenario-requirements.yml file which can be used to populate the
roles directory with all the scenarios.

Change-Id: I0cdadb63849e4565c31559817660d23217879053
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -57,6 +57,7 @@
   roles:
       - role: configure-network
   tasks:
+    - include: get-opnfv-scenario-requirements.yml
     - name: generate SSH keys
       shell: ssh-keygen -b 2048 -t rsa -f /root/.ssh/id_rsa -q -N ""
       args:
