xci: playbooks: Add generic playbook for scenarios to plug their roles
The new bootstrap-scenarios.yml playbook is aimed to be used by
scenarios to configure themselves right before we proceed with
the bootstrapping. This way we can avoid having scenario specific
stuff into the generic code.

Change-Id: I3026013719a50458c65405439712270f25f569ff
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -98,6 +98,7 @@
       shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/xci/file/openstack_services.yml {{OPENSTACK_OSA_PATH}}/playbooks/defaults/repo_packages/openstack_services.yml"
       when:
         - OPENSTACK_OSA_VERSION != "master"
+    - include: bootstrap-scenarios.yml
     - name: bootstrap ansible on opnfv host
       command: "/bin/bash ./scripts/bootstrap-ansible.sh"
       args:
