xci: AIO: Disable tempest on AIO
In a similar fashion to the rest of the flavors, we disable the
tempest tests.

Change-Id: Id4a9912d87d1dabe3e433456f4b145d319e174d5
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/file/aio/configure-opnfvhost.yml
+++ b/xci/file/aio/configure-opnfvhost.yml
@@ -10,6 +10,15 @@
       command: "/bin/bash ./scripts/bootstrap-ansible.sh"
       args:
         chdir: "{{OPENSTACK_OSA_PATH}}"
+    - name: Disable AIO tempest
+      lineinfile:
+        path: "{{ OPENSTACK_OSA_PATH }}/tests/roles/bootstrap-host/templates/user_variables.aio.yml.j2"
+        regexp: "^{{ item }}.*"
+        line: "{{ item }}: false"
+        state: present
+      with_items:
+        - "tempest_install"
+        - "tempest_run"
     - name: bootstrap opnfv host as aio
       command: "/bin/bash ./scripts/bootstrap-aio.sh"
       args:
